# nfcDemo-Android

./: .gitignore  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: initParams.json  testBTC44.json
app/src/main/java/com/ftsafe/core/: JubCallback.java  NativeApi.java  NfcSDK.java
app/src/main/java/com/ftsafe/core/device/ble/: BleDevice.java  DeviceAppletInfo.java  InnerDiscCallback.java  InnerScanCallback.java
app/src/main/java/com/ftsafe/nfcdemo/: MainActivity.java  QRScanActivity.java  SDKActivity.java  SimpleTestActivity.java
app/src/main/java/com/ftsafe/nfcdemo/listener/: ApiAsyncListener.java  TrezorApduListener.java  TrezorAsyncListener.java
app/src/main/java/com/ftsafe/nfcdemo/nfc/: ApiNfc.java  ImplNfc.java  NfcComm.java
app/src/main/java/com/ftsafe/nfcdemo/utils/: CommList.java  FileUtils.java  JSONParseUtils.java  TipDialog.java  Utils.java  VerifyPinDialog.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/JubiterSDK_C/include/HDKey/: HDKey.hpp
app/src/main/jni/JubiterSDK_C/include/context/: ContextFactory.h
app/src/main/jni/JubiterSDK_C/include/device/: DeviceIOLogHelper.hpp
app/src/main/jni/JubiterSDK_C/include/token/: ErrorHandler.h  TokenFactory.h
app/src/main/jni/JubiterSDK_C/include/token/BTC/: JubiterBaseBTCImpl.h  JubiterBladeBCHImpl.h  JubiterBladeBTCImpl.h  JubiterBladeDashImpl.h  JubiterBladeLTCImpl.h  JubiterBladeQTUMImpl.h  JubiterBladeUSDTImpl.h  JubiterNFCBCHImpl.h  JubiterNFCBTCImpl.h  JubiterNFCDashImpl.h  JubiterNFCLTCImpl.h  JubiterNFCUSDTImpl.h  TrezorCryptoBCHImpl.h  TrezorCryptoBTCImpl.h  TrezorCryptoDashImpl.h  TrezorCryptoLTCImpl.h  TrezorCryptoQTUMImpl.h  TrezorCryptoUSDTImpl.h
app/src/main/jni/JubiterSDK_C/include/token/EOS/: JubiterBladeEOSImpl.h  TrezorCryptoEOSImpl.h
app/src/main/jni/JubiterSDK_C/include/token/ETH/: JubiterBladeETHImpl.h  JubiterNFCETHImpl.h  TrezorCryptoETHImpl.h
app/src/main/jni/JubiterSDK_C/include/token/HC/: JubiterBladeHCImpl.h  TrezorCryptoHCImpl.h
app/src/main/jni/JubiterSDK_C/include/token/JubiterNFC/: JubiterNFCImpl.h
app/src/main/jni/JubiterSDK_C/include/token/TrezorCrypto/: TrezorCryptoToken.h
app/src/main/jni/JubiterSDK_C/include/token/XRP/: JubiterBladeXRPImpl.h  TrezorCryptoXRPImpl.h
app/src/main/jni/JubiterSDK_C/include/token/interface/: BaseToken.h  QTUMTokenInterface.hpp  SoftwareTokenInterface.h
app/src/main/jni/src/: implJni.cpp
app/src/main/jni/utils/: logUtils.h  utils.cpp  utils.h
app/src/main/res/layout/: activity_main.xml  activity_qrscan.xml  activity_sdk.xml  activity_simple_test.xml  dialoh_tip.xml  layout_qrscan.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: nfc_tech_filter.xml
app/src/test/java/com/ftsafe/nfcdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libzxing/: build.gradle
libzxing/src/androidTest/java/com/uuzuche/libzxing/: ExampleInstrumentedTest.java
libzxing/src/main/: AndroidManifest.xml
libzxing/src/main/java/com/uuzuche/libzxing/: DisplayUtil.java  ZApplication.java
libzxing/src/main/java/com/uuzuche/libzxing/activity/: CaptureActivity.java  CaptureFragment.java  CodeUtils.java  ZXingLibrary.java
libzxing/src/main/java/com/uuzuche/libzxing/camera/: AutoFocusCallback.java  BitmapLuminanceSource.java  CameraConfigurationManager.java  CameraManager.java  FlashlightManager.java  PlanarYUVLuminanceSource.java  PreviewCallback.java
libzxing/src/main/java/com/uuzuche/libzxing/decoding/: CaptureActivityHandler.java  DecodeFormatManager.java  DecodeHandler.java  DecodeThread.java  FinishListener.java  InactivityTimer.java  Intents.java
libzxing/src/main/java/com/uuzuche/libzxing/encoding/: EncodingHandler.java
libzxing/src/main/java/com/uuzuche/libzxing/view/: ViewfinderResultPointCallback.java  ViewfinderView.java
libzxing/src/main/res/layout/: fragment_capture.xml
libzxing/src/test/java/com/uuzuche/libzxing/: ExampleUnitTest.java
